# test_rest_api

./: .gitignore  README.md  pyproject.toml
calendar_calc/: app.py  hieroglyph_calculator.py  hieroglyphs.py
