[tool.poetry]
name = "calendar-calc"
version = "0.1.0"
description = "Chineese calendar calculator"
authors = ["Denis Safiullin <fckninja@gmail.com>"]
readme = "README.md"
packages = [{include = "calendar_calc"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
